--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Pilates, fisioterapia e cuidados corporais em Ribeirão Preto. Aqui você respira, solta e volta a se sentir leve.">
+    <link rel="icon" type="image/logo" href="/favicon.png">
     <title>Clínica Inove - Estúdio de Movimento e Leveza</title>
-    
+
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         html { scroll-behavior: smooth; }
