--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         h2 { font-size: clamp(32px, 4vw, 40px); letter-spacing: -0.01em; }
         h3 { font-size: clamp(20px, 2.5vw, 24px); font-weight: 500; }
         p { font-size: 18px; line-height: 1.7; }
-        .container { max-width: 1200px; margin: 0 auto; padding: 0 80px; }
+        .container { max-width: 2200px; margin: 0 auto; padding: 0 80px; }
                 
-        @media (max-width: 768px) { .container { padding: 0 24px; } }
+        @media (max-width: 768px) { .container { padding: 0 6px; } }
         .logo img { height: 68px; }
         .logo a { font-family: 'Cormorant', serif; font-size: 30px; font-weight: light; color: #752F92; margin-left: 5px; vertical-align: 40% ; }
         header { position: fixed; top: 0; left: 0; right: 0; background: rgba(255,255,255,0.95); backdrop-filter: blur(10px); z-index: 1000; border-bottom: 2px solid #752F92; transition: all 0.3s; }
@@ -112,22 +112,23 @@
         .card h3 { margin-bottom: 16px; color: #752F92; }
         .card p { font-size: 16px; color: #5A5A5A; }
 
-        .servicos { background: #FFF; padding: 96px 0; }
+        .servicos { background: #FFF; padding: 96px 0; padding-left: 40px; padding-right: 40px; }
         .servicos-grid {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
+            display: grid; /* Alterado de flex para grid */
+            grid-template-columns: repeat(4, 1fr);
             grid-template-rows: 1fr 1fr;
             gap: 40px 32px;
             margin-top: 64px;
-            max-width: 1000px;
+            width: 100%;
             margin-left: 0;
             margin-right: 0;
+            justify-content: center;
         }
         .servico-card {
             position: relative;
             background: #FFF;
             border: 1px solid rgba(117,47,146,0.08);
-            border-radius: 24px;
+            border-radius: 14px;
             overflow: hidden;
             transition: all 0.3s cubic-bezier(0.4,0,0.2,1);
             opacity: 0;
@@ -138,30 +139,29 @@
         .servico-card.visible { animation: scaleIn 0.6s ease-out forwards; }
         @keyframes scaleIn { to { opacity: 1; transform: scale(1); } }
         /* Pilates card ocupa toda a primeira linha */
-        .servico-card:first-child {
+        /*.servico-card:first-child {
             grid-column: 1 / span 3;
-            grid-row: 1 / 2;
             min-height: 380px;
             flex-direction: column;
-        }
-        .servico-card:not(:first-child) {
+        }*/
+        /*.servico-card:not(:first-child) {
             grid-row: 2 / 3;
-        }
+        }*/
         @media (max-width: 1100px) {
             .servicos-grid {
-            grid-template-columns: 1fr;
-            grid-template-rows: repeat(4, auto);
-            gap: 32px;
-            max-width: 100%;
+                grid-template-columns: 1fr;
+                grid-template-rows: repeat(4, auto);
+                gap: 32px;
+                max-width: 100%;
             }
             .servico-card:first-child {
-            grid-column: 1;
-            grid-row: 1;
-            flex-direction: column;
-            min-height: unset;
+                grid-column: 1;
+                grid-row: 1;
+                flex-direction: column;
+                min-height: unset;
             }
             .servico-card:not(:first-child) {
-            grid-row: auto;
+                grid-row: auto;
             }
         }
         .servico-card:hover { transform: translateY(-4px); box-shadow: 0 12px 48px rgba(117,47,146,0.12); }
@@ -170,13 +170,18 @@
             height: 280px;
             overflow: hidden;
             flex: 1 1 350px;
-            min-width: 420px;
+            /* min-width removido para permitir expansão */
         }
         .servico-card:first-child .servico-image {
             height: 380px;
-            min-width: 480px;
+            /* min-width removido para permitir expansão */
         }
-        .servico-image img { width: 100%; height: 100%; object-fit: cover; transition: transform 0.6s; }
+        .servico-image img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            transition: transform 0.6s;
+        }
         .servico-card:hover .servico-image img { transform: scale(1.05); }
         .servico-image::after {
             content: '';
@@ -474,7 +479,7 @@
     </style>
 
     <section class="servicos">
-        <div class="container">
+        <div class="servicos-interna">
             <div class="section-title animate-on-scroll">
                 <h2>Nossos serviços</h2>
             </div>
