--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@
         }
         @media (max-width: 1100px) {
             .como-funciona-depoimentos {
-                grid-template-columns: 1fr;
-                gap: 32px;
+            grid-template-columns: 1fr;
+            gap: 32px;
             }
         }
 
@@ -244,7 +244,7 @@
             align-items: flex-start;
             position: relative;
             margin-top: 4px;
-            gap: 100px;
+            gap: 140px; /* Aumentado o gap entre os steps */
             min-height: 340px;
         }
         .steps::before {
@@ -259,12 +259,12 @@
         }
         @media (max-width: 768px) {
             .steps {
-                align-items: center;
-                margin-top: 32px;
+            align-items: center;
+            margin-top: 32px;
             }
             .steps::before {
-                left: 50%;
-                transform: translateX(-50%);
+            left: 50%;
+            transform: translateX(-50%);
             }
         }
         .step {
@@ -273,8 +273,8 @@
             position: relative;
             z-index: 1;
             background: none;
-            text-align: center;
             width: 100%;
+            gap: 0 32px; /* Espaço horizontal entre número e texto */
         }
         .step-number { 
             width: 80px; 
@@ -294,12 +294,16 @@
             position: relative;
             z-index: 2;
         }
-        
+        .step-content {
+            display: flex;
+            flex-direction: column;
+            gap: 12px; /* Espaço entre h3 e p */
+        }
         .step h3, .step p {
             text-align: left;
         }
         .step h3 {
-            margin-bottom: 8px;
+            margin-bottom: 0;
             color: #752F92;
             font-size: 22px;
         }
@@ -310,15 +314,19 @@
         }
         @media (max-width: 768px) {
             .step {
-                flex-direction: column;
-                align-items: center;
-                text-align: center;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+            gap: 16px 0;
             }
             .step-number {
-                margin: 0 0 16px 0;
+            margin: 0 0 16px 0;
+            }
+            .step-content {
+            align-items: center;
             }
             .step h3, .step p {
-                text-align: center;
+            text-align: center;
             }
         }
         
